# CaribConnect

./: .env  .env.template  .gitignore  docker-compose.yml  filebeat.yml
backend/: Dockerfile  pyproject.toml
backend/app/: logging_setup.py  main.py  models.py  worker.py
backend/app/api/: main.py
backend/app/api/api_v1/endpoints/: graphql.py  notifications.py  payments.py  services.py  social_auth.py
backend/app/api/routes/: graphql.py  notifications.py  services.py
backend/app/api/v1/endpoints/: payments.py  social_auth.py
backend/app/core/: config.py  db.py  oauth.py  security.py
backend/app/helpers/: auth_helpers.py  location_helpers.py  task_helpers.py
backend/app/middleware/: authentication.py  geoipMiddleware.py  middleware.py
backend/app/schemas/: graphql.py  payment.py  tokenPayload.py
backend/app/services/: cache.py  email_service.py  geoip_service.py  message_queue.py  tasks.py
backend/app/workers/: celery_worker.py  notification_worker.py  payment_worker.py
backend/scripts/: prestart.sh
